# computer-vision

./: .gitignore  README.md  TODOs.md  WARP.md  hydra_comprehensive_pipeline.py  main.py  plot_skeleton_dataset.py  pyproject.toml  redme.md  requirements.txt
calibration/: plot.py  rectified_videos.py  rectify_coco_dataset.py
configs/: comprehensive_pipeline.yaml  config.yaml  config_dataset.yaml  config_multirun.yaml  config_video.yaml  visualization_config.yaml
configs/data_source/: existing_coco.yaml  roboflow.yaml  streaming.yaml  video_file.yaml
configs/logging/: default.yaml
configs/models/: default.yaml
configs/paths/: dataset.yaml  video.yaml
configs/pipeline/: dataset.yaml  video.yaml
configs/pose_model/: mediapipe.yaml  prob_pose.yaml  vit_pose.yaml  yolo.yaml
cv_pipeline/: __init__.py
cv_pipeline/core/: __init__.py  base.py  config.py  hydra_config.py  pipeline.py
cv_pipeline/data_sources/: __init__.py  data_sources.py
cv_pipeline/pose_estimation/: __init__.py  base_estimator.py  mediapipe_estimator.py  prob_estimator.py  supervision_integration.py  vit_estimator.py  (+1 more)
old_files/: params.py
output/: pipeline_results.json
pose_estimation/: run_yolo_pose.py
pose_estimation_vit/: run_vit_pose.py
rectification/: rectify_dataset.py  rectify_video.py
reprojection/: evaluate_reprojection.py  reprojection.py  visualize_reprojection.py
src/: rectifier.py  reprojector.py  triangulator.py
triangulation/: 3d_poses.json  3d_to_2d.py  plot_3d_poses.py  plot_skeleton.py  plot_skeleton_3d.py  triangulate.py  triangulate_player.py
(+94 files in other folders)
